kubernetes/service.yaml
apiVersion: v1

kind: Service


metadata:

  name: employee-service

  namespace: employee-prod
  type: ClusterIP
